--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">Apt Pomodoro Tracker</string>
 
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="nav_open">open</string>
+    <string name="nav_close">close</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="timer_sequences_file_key">TimerSequencesFile.dat</string>
     <string name="default_timer_sequence_key">Default Pomodoro</string>
